# agent-replay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  ROADMAP.md  agentreplay_deck_final.pptx  compose.yml  pyproject.toml  render.yaml
.specify/memory/: constitution.md
amd/: README.md  analysis_prompt.txt  environment.txt  gemma4_verdict_on_amd.json  gpu_compute_check.py  gpu_compute_check_output.txt  prompt.txt  rocm_smi.txt  rocm_smi_during_inference.txt  run_analysis_on_amd.py  run_analysis_on_amd_standalone.py  run_gemma_analysis.py  verdict.json  verdict.md
app/: db.py  main.py  models.py  schemas.py
app/analysis/: client.py  prompts.py  serializer.py
app/replay/: engine.py  interceptor.py
app/routers/: analysis.py  detection.py  fork.py  ingest.py  runs.py
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  (+2 more)
docs/: DATA_CONTRACT.md  DECISIONS.md
scripts/: demo_agent.py  seed_demo_run.py
sdk/: pyproject.toml
sdk/agentreplay/: __init__.py  buffer.py  state.py  tool.py  transport.py  wrapper.py
specs/001-agentreplay-v1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_amd_standalone_embeds.py
tests/contract/: test_ingest.py  test_runs.py
tests/integration/: test_analysis.py  test_detection.py  test_fork.py  test_fork_safety.py  test_interception_tiers.py  test_sdk_never_raises.py  test_sweep_selective.py
tests/unit/: test_canonical_json.py  test_sdk_buffer.py  test_sdk_wrapper.py
(+44 files in other folders)
