[project]
name = "agentreplay-backend"
version = "0.1.0"
description = "AgentReplay V1 backend: ingest API + replay/fork engine + analysis/detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
