[project]
name = "agentreplay"
version = "0.1.0"
description = "AgentReplay SDK — records LLM calls, tool calls, and state changes for time-travel debugging"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentreplay"]
